@@ -1,3 +1,8 @@
+2023-January-15 Struan Robertson
+
+		* ParallelManager.h, main.cpp: Added error checking method for parallel execution
+		and applied to main method.
+
 2023-January-14 Struan Robertson
 
 		* CollisionOperator.cpp: Speculative fix for isomer decay trace analysis issue.
